--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>1, 2, 3... probando</h1>
+								<h1>Hola. Hello.</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>Soy un chileno medio agringado y semi-nómade, interesado en educación, historia, urbanismo, economía, China, Chile, y más.  Ahora estoy haciendo un Master en Educación en Stanford, enfocado en aprendizaje, diseño, y tecnología.<br /> <br />
+								I am a somewhat Americanized Chilean (“agringado”), an educator, consultant, traveler, and writer.  After some time in China and back in Chile, I am now at Stanford University pursing a Master’s Degree in Learning, Design, and Technology.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
