--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
+							<li><a href="ldt.html">Landing</a></li>
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
 
@@ -51,7 +50,7 @@
 								<p>Soy un chileno medio agringado y semi-nómade, interesado en educación, historia, urbanismo, economía, China, Chile, y más.  Ahora estoy haciendo un Master en Educación en Stanford, enfocado en aprendizaje, diseño, y tecnología.<br /> <br />
 								I am a somewhat Americanized Chilean (“agringado”), an educator, consultant, traveler, and writer.  After some time in China and back in Chile, I am now at Stanford University pursing a Master’s Degree in Learning, Design, and Technology.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">See more</a></li>
 								</ul>
 							</div>
 						</div>
@@ -67,8 +66,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="ldt.html" class="link">Stanford LDT ePortfolio</a></h3>
+										<p>Courses and Projects</p>
 									</header>
 								</article>
 								<article>
@@ -76,8 +75,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="ldt.html" class="link">Education in Chile</a></h3>
+										<p>Research and Projects</p>
 									</header>
 								</article>
 								<article>
@@ -85,8 +84,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="ldt.html" class="link">Other Chilean Stuff</a></h3>
+										<p>Public Policy and Business</p>
 									</header>
 								</article>
 								<article>
@@ -94,8 +93,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="ldt.html" class="link">China</a></h3>
+										<p>Education and Tech</p>
 									</header>
 								</article>
 								<article>
@@ -103,8 +102,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="ldt.html" class="link">Published pieces</a></h3>
+										<p>My writing samples</p>
 									</header>
 								</article>
 								<article>
@@ -112,8 +111,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="ldt.html" class="link">Blog</a></h3>
+										<p>Assorted thoughts in English and Spanish</p>
 									</header>
 								</article>
 							</section>
@@ -126,7 +125,7 @@
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Projects / Proyectos</a></li>
+										<li><a href="ldt.html" class="button next">Projects / Proyectos</a></li>
 									</ul>
 								</div>
 							</section>
