--- a/ldt.html
+++ b/ldt.html
@@ -75,7 +75,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="dts.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -83,15 +83,15 @@
 											<header class="major">
 												<h3>Design Thinking Studio</h3>
 											</header>
-											<p>Course at the Stanford d.school where we learned to implement design thinking and partnered with community organizations to work on real projects. <br /> This quarter we worked with women's leadership organizations near Stanford. My team partnered with the Stanford Clayman Institute to help with a new mentorship program for high school girls interested in STEM <br /> My second project focused on ways to bring people in my LDT cohort closer to classrooms and schools. </p> 
+											<p>Course at the Stanford d.school where we partnered with community organizations to work on real projects. <br /> This quarter we worked with women's leadership organizations. My team partnered with the Stanford Clayman Institute to help with a new mentorship program for high school girls interested in STEM <br /> My second project focused on ways to bring people in my LDT cohort closer to classrooms and schools. </p> 
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="dts.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="tfl.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -99,25 +99,25 @@
 											<header class="major">
 												<h3>Technology for Learners</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Course at the School of Education where we followed a design thinking approach to help community organizations develop technology for education.<br />  My team worked with the Stanford Online High School to help them develop a PE program for their students spread around the world</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="tfl.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="ule.html" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>Understanding Learning Environments</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Course at the School of Education where we learned the major theories of education developed over the course of the last century. <br /> We developed concept maps summarizing these thinkers. <br /> We also carried out observations of learning environments. I observed a Scout Troop meeting in Palo Alto.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="ule.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
