Added winter quarter courses, LDT project links, and some images

--- a/ldt.html
+++ b/ldt.html
@@ -76,7 +76,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="dts.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/postits.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -122,6 +122,54 @@
 										</div>
 									</div>
 								</section>
+								<section>
+									<a href="tfl.html" class="image">
+										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Beyond Bits & Atoms</h3>
+											</header>
+											<p>Two-part course where we explored the use of maker spaces in education and learned about constructionism, the educational philosophy behind them. We learned to use technological tools to create educational products ourselves. <br />  For one of my projects, my team built a pirate-themed board game that taught a student about the principles of programming. <br /> In our final project, Shared Story, my team built a Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.</p>
+											<ul class="actions">
+												<li><a href="tfl.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="tfl.html" class="image">
+										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>d.media</h3>
+											</header>
+											<p>Digital design course at the d.school where we learned the basics of visual design and prototyping tools like Figma and InVision. Small projects included designing a restaurant menu and designing movie icons. <br /> My main project involved designing a mobile and a desktop app for students in school projects to define and reflect on the skills they are learning</p>
+											<ul class="actions">
+												<li><a href="tfl.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="tfl.html" class="image">
+										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Internship: User Experience Research at Autodesk</h3>
+											</header>
+											<p>In my internship I worked on user experience research for re-designing Autodesk's  micro-credentialing system on their online learning content, specifically for Fusion 360. <br /> I had to create and post surveys on the online learning platform and analyze the data, carry out interviews with university and community college students learning to use Fusion 360, and combine this quantitative and qualitative data into actionable insights. </p>
+											<ul class="actions">
+												<li><a href="tfl.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 							</section>
 
 						<!-- Three -->
@@ -130,10 +178,7 @@
 									<header class="major">
 										<h2>LDT Master's Project</h2>
 									</header>
-									<p>Work in Progress.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">See more</a></li>
-									</ul>
+									<p>How might we help middle and high-school students engaged in projects define and share their learning goals and help each other achieve them? <br /> <br /><a href="Project Proposal Salvatierra.pdf" class="button next scrolly">View proposal (working draft) here.</a><br /><br />I have completed an initial, non-functional, prototype on Figma <br /> <br /><a href="https://www.figma.com/proto/WIgn9wfBf20HSQz7NFdtKGfk/DP7" class="button next scrolly">View prototype here</a> </p> 								
 								</div>
 							</section>
 
