Updated contact info, added pages for winter quarter classes

--- a/ldt.html
+++ b/ldt.html
@@ -123,7 +123,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="tfl.html" class="image">
+									<a href="bba.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -133,13 +133,13 @@
 											</header>
 											<p>Two-part course where we explored the use of maker spaces in education and learned about constructionism, the educational philosophy behind them. We learned to use technological tools to create educational products ourselves. <br />  For one of my projects, my team built a pirate-themed board game that taught a student about the principles of programming. <br /> In our final project, Shared Story, my team built a Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.</p>
 											<ul class="actions">
-												<li><a href="tfl.html" class="button">Learn more</a></li>
+												<li><a href="bba.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="tfl.html" class="image">
+									<a href="dm.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -149,13 +149,13 @@
 											</header>
 											<p>Digital design course at the d.school where we learned the basics of visual design and prototyping tools like Figma and InVision. Small projects included designing a restaurant menu and designing movie icons. <br /> My main project involved designing a mobile and a desktop app for students in school projects to define and reflect on the skills they are learning</p>
 											<ul class="actions">
-												<li><a href="tfl.html" class="button">Learn more</a></li>
+												<li><a href="dm.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="tfl.html" class="image">
+									<a href="adsk.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -165,7 +165,7 @@
 											</header>
 											<p>In my internship I worked on user experience research for re-designing Autodesk's  micro-credentialing system on their online learning content, specifically for Fusion 360. <br /> I had to create and post surveys on the online learning platform and analyze the data, carry out interviews with university and community college students learning to use Fusion 360, and combine this quantitative and qualitative data into actionable insights. </p>
 											<ul class="actions">
-												<li><a href="tfl.html" class="button">Learn more</a></li>
+												<li><a href="adsk.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -212,25 +212,16 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">dsalva@stanford.edu</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>650 862 2454</span>
 									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
+								</section>	
 							</section>
 						</div>
 					</section>
