Replaced coursework with projects, changed blog link

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="ldt.html" class="link">Blog</a></h3>
+										<h3><a href="https://medium.com/@diegosalva.ds" class="link">Blog</a></h3>
 										<p>Assorted thoughts in English and Spanish</p>
 									</header>
 								</article>
@@ -121,11 +121,7 @@
 
 						<!-- Two -->
 							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+								<div class="inner">								
 									<ul class="actions">
 										<li><a href="ldt.html" class="button next">Projects / Proyectos</a></li>
 									</ul>
