--- a/ldt.html
+++ b/ldt.html
@@ -66,72 +66,72 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Coursework</h2>
+										<h2>My projects</h2>
 									</header>
-									<p>Fall Quarter 2017. Check out some of my projects.</p>
+									<p>Projects, coursework, and work</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="dts.html" class="image">
-										<img src="images/postits.jpg" alt="" data-position="center center" />
+									<a href="mp.html" class="image">
+										<img src="images/peloton_project_home.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Design Thinking Studio</h3>
+												<h3>Peloton: A Teamwork Tool for the Classroom</h3>
 											</header>
-											<p>Course at the Stanford d.school where we partnered with community organizations to work on real projects. <br /> This quarter we worked with women's leadership organizations. My team partnered with the Stanford Clayman Institute to help with a new mentorship program for high school girls interested in STEM <br /> My second project focused on ways to bring people in my LDT cohort closer to classrooms and schools. </p> 
+											<p>Master's Project for the LDT program <br /> All too often, the only assessments high school students get in school are content-based and summative, resulting in low self-confidence and fixed mindsets for "underachieving" students.  <br /> With Peloton, a skills map will assign students competencies in skills that traditional assessments do not capture. Students will then give feedback to their peers on those skills, thus allowing them to learn from each other and gain self-efficacy and confidence through peer teaching.  </p> 
 											<ul class="actions">
-												<li><a href="dts.html" class="button">Learn more</a></li>
+												<li><a href="mp.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="tfl.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									<a href="soc.html" class="image">
+										<img src="images/seeds_front.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Technology for Learners</h3>
+												<h3>Seeds of Change Outreach Toolkit</h3>
 											</header>
-											<p>Course at the School of Education where we followed a design thinking approach to help community organizations develop technology for education.<br />  My team worked with the Stanford Online High School to help them develop a PE program for their students spread around the world</p>
+											<p> Design thinking project developed at a d.school studio-based course. <br/>  This quarter we worked with women's leadership organizations. My team partnered with the Stanford Clayman Institute to help with a new mentorship program for high school girls interested in STEM. <br/> My team designed an outreach program and toolkit for the organization. </p>
 											<ul class="actions">
-												<li><a href="tfl.html" class="button">Learn more</a></li>
+												<li><a href="soc.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="ule.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									<a href="shs.html" class="image">
+										<img src="images/bba_demo.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Understanding Learning Environments</h3>
+												<h3>Shared Story</h3>
 											</header>
-											<p>Course at the School of Education where we learned the major theories of education developed over the course of the last century. <br /> We developed concept maps summarizing these thinkers. <br /> We also carried out observations of learning environments. I observed a Scout Troop meeting in Palo Alto.</p>
+											<p>A Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.<br /> The project combined ideas from Freire—helping learners make sense of and take ownership of their social environment-with a technological approach.<br /> Completed with Po Tsui as final project for Beyond Bits and Atoms course at the Stanford GSE.</p>
 											<ul class="actions">
-												<li><a href="ule.html" class="button">Learn more</a></li>
+												<li><a href="shs.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="bba.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/photo_app.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Beyond Bits & Atoms</h3>
+												<h3>Super Photo App</h3>
 											</header>
-											<p>Two-part course where we explored the use of maker spaces in education and learned about constructionism, the educational philosophy behind them. We learned to use technological tools to create educational products ourselves. <br />  For one of my projects, my team built a pirate-themed board game that taught a student about the principles of programming. <br /> In our final project, Shared Story, my team built a Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.</p>
+											<p>Simple photo app built for CS142 using the MEAN stack: MongoDB, Express.js, Node.js, and Angular.js <br />  Has an Instagram-lite functionality: can register new users, add photos, like photos, create a favorites list, and see other user profiles. <br /> Built using pre-defined back-end and main controller from the CS142 team, but the design and most front-end components, as well as the backend HTTP request handlers, are my own. </p>
 											<ul class="actions">
 												<li><a href="bba.html" class="button">Learn more</a></li>
 											</ul>
@@ -140,14 +140,14 @@
 								</section>
 								<section>
 									<a href="dm.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/vitamin_sea.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>d.media</h3>
+												<h3>Vitamin Sea</h3>
 											</header>
-											<p>Digital design course at the d.school where we learned the basics of visual design and prototyping tools like Figma and InVision. Small projects included designing a restaurant menu and designing movie icons. <br /> My main project involved designing a mobile and a desktop app for students in school projects to define and reflect on the skills they are learning</p>
+											<p>A pirate-themed board game that teaches middle-school-age learners about the principles of computer programming and game design. <br />After defining the need through interviews with a middle school student, we designed and built the board game<br />Components included a laser-cut box, 3D printed game pieces, vinyl-cut board pieces, and more.</p>
 											<ul class="actions">
 												<li><a href="dm.html" class="button">Learn more</a></li>
 											</ul>
@@ -170,16 +170,6 @@
 										</div>
 									</div>
 								</section>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="inner">
-									<header class="major">
-										<h2>LDT Master's Project</h2>
-									</header>
-									<p>How might we help middle and high-school students engaged in projects define and share their learning goals and help each other achieve them? <br /> <br /><a href="Project Proposal Salvatierra.pdf" class="button next scrolly">View proposal (working draft) here.</a><br /><br />I have completed an initial, non-functional, prototype on Figma <br /> <br /><a href="https://www.figma.com/proto/WIgn9wfBf20HSQz7NFdtKGfk/DP7" class="button next scrolly">View prototype here</a> </p> 								
-								</div>
 							</section>
 
 					</div>
