--- a/ldt.html
+++ b/ldt.html
@@ -53,7 +53,7 @@
 								<h1>Stanford LDT ePortfolio</h1>
 							</header>
 							<div class="content">
-								<p>Coursework for my MA in Education<br />
+								<p>Projects and coursework for my MA in Education<br />
 								Learning, Design, and Technology</p>
 							</div>
 						</div>
@@ -67,8 +67,7 @@
 								<div class="inner">
 									<header class="major">
 										<h2>My projects</h2>
-									</header>
-									<p>Projects, coursework, and work</p>
+									</header>									
 								</div>
 							</section>
 
@@ -76,7 +75,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="mp.html" class="image">
-										<img src="images/peloton_project_home.jpg" alt="" data-position="center center" />
+										<img src="images/peloton_project_home.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -92,7 +91,7 @@
 								</section>
 								<section>
 									<a href="soc.html" class="image">
-										<img src="images/seeds_front.jpg" alt="" data-position="top center" />
+										<img src="images/seeds_front.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -108,7 +107,7 @@
 								</section>
 								<section>
 									<a href="shs.html" class="image">
-										<img src="images/bba_demo.jpg" alt="" data-position="25% 25%" />
+										<img src="images/bba_demo.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -124,7 +123,7 @@
 								</section>
 								<section>
 									<a href="bba.html" class="image">
-										<img src="images/photo_app.jpg" alt="" data-position="top center" />
+										<img src="images/photo_app.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -140,7 +139,7 @@
 								</section>
 								<section>
 									<a href="dm.html" class="image">
-										<img src="images/vitamin_sea.jpg" alt="" data-position="top center" />
+										<img src="images/vitamin_sea.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -154,9 +153,16 @@
 										</div>
 									</div>
 								</section>
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h2>Work</h2>
+									</header>									
+								</div>
+							</section>
 								<section>
 									<a href="adsk.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/autodesk-logo.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -226,9 +232,7 @@
 								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
+						
 						</div>
 					</footer>
 
