added coursework, reports, video links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								I am a somewhat Americanized Chilean (“agringado”), an educator, consultant, traveler, and writer.  After some time in China and back in Chile, I am now at Stanford University pursing a Master’s Degree in Learning, Design, and Technology.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">See more</a></li>
-									<li><a href="resume_dsalvatierra.pdf" class="button next scrolly">Resume</a></li>
+									<li><a href="resume_dsalvatierra_apr_2018" class="button next scrolly">Resume</a></li>
 
 								</ul>
 							</div>
