--- a/ldt.html
+++ b/ldt.html
@@ -74,7 +74,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="mp.html" class="image">
+									<a href="ldt.html" class="image">
 										<img src="images/peloton_project_home.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -84,13 +84,13 @@
 											</header>
 											<p>Master's Project for the LDT program <br /> All too often, the only assessments high school students get in school are content-based and summative, resulting in low self-confidence and fixed mindsets for "underachieving" students.  <br /> With Peloton, a skills map will assign students competencies in skills that traditional assessments do not capture. Students will then give feedback to their peers on those skills, thus allowing them to learn from each other and gain self-efficacy and confidence through peer teaching.  </p> 
 											<ul class="actions">
-												<li><a href="mp.html" class="button">Learn more</a></li>
+												<li><a href="pelotonProjectReport.pdf" class="button">Progress report</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="soc.html" class="image">
+									<a href="ldt.html" class="image">
 										<img src="images/seeds_front.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -100,13 +100,13 @@
 											</header>
 											<p> Design thinking project developed at a d.school studio-based course. <br/>  This quarter we worked with women's leadership organizations. My team partnered with the Stanford Clayman Institute to help with a new mentorship program for high school girls interested in STEM. <br/> My team designed an outreach program and toolkit for the organization. </p>
 											<ul class="actions">
-												<li><a href="soc.html" class="button">Learn more</a></li>
+												<li><a href="seeds_of_change_report.pdf" class="button">Final report</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="shs.html" class="image">
+									<a href="ldt.html" class="image">
 										<img src="images/bba_demo.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -116,13 +116,14 @@
 											</header>
 											<p>A Tangible User Interface where young learners can record important life events in a collaborative map of their community, building empathy and understanding across peers from different backgrounds.<br /> The project combined ideas from Freire—helping learners make sense of and take ownership of their social environment-with a technological approach.<br /> Completed with Po Tsui as final project for Beyond Bits and Atoms course at the Stanford GSE.</p>
 											<ul class="actions">
-												<li><a href="shs.html" class="button">Learn more</a></li>
+												<li><a href="https://www.youtube.com/watch?v=Ro8TTlYSRcE&feature=youtu.be" class="button">Demo video</a></li>
+												<li><a href="sharedStoryReport.pdf" class="button">Final report</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="bba.html" class="image">
+									<a href="ldt.html" class="image">
 										<img src="images/photo_app.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -130,15 +131,15 @@
 											<header class="major">
 												<h3>Super Photo App</h3>
 											</header>
-											<p>Simple photo app built for CS142 using the MEAN stack: MongoDB, Express.js, Node.js, and Angular.js <br />  Has an Instagram-lite functionality: can register new users, add photos, like photos, create a favorites list, and see other user profiles. <br /> Built using pre-defined back-end and main controller from the CS142 team, but the design and most front-end components, as well as the backend HTTP request handlers, are my own. </p>
+											<p>Simple photo app built for CS142 using the MEAN stack: MongoDB, Express.js, Node.js, and Angular.js <br />  Has an Instagram-lite functionality: can register new users, add photos, like photos, create a favorites list, and see other user profiles. <br /> Built on top of back-end files and main controller from the CS142 team, but the design and front-end components, as well as the backend HTTP request handlers in the server, are my own. </p>
 											<ul class="actions">
-												<li><a href="bba.html" class="button">Learn more</a></li>
+												<li><a href="https://www.youtube.com/watch?v=B1HoyuhgnHo" class="button">Demo video</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="dm.html" class="image">
+									<a href="ldt.html" class="image">
 										<img src="images/vitamin_sea.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -148,7 +149,7 @@
 											</header>
 											<p>A pirate-themed board game that teaches middle-school-age learners about the principles of computer programming and game design. <br />After defining the need through interviews with a middle school student, we designed and built the board game<br />Components included a laser-cut box, 3D printed game pieces, vinyl-cut board pieces, and more.</p>
 											<ul class="actions">
-												<li><a href="dm.html" class="button">Learn more</a></li>
+												<li><a href="vitaminSeaReport.pdf" class="button">Game instructions</a></li>
 											</ul>
 										</div>
 									</div>
@@ -161,7 +162,7 @@
 								</div>
 							</section>
 								<section>
-									<a href="adsk.html" class="image">
+									<a href="ldt.html" class="image">
 										<img src="images/autodesk-logo.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -176,6 +177,40 @@
 										</div>
 									</div>
 								</section>
+							</section>
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h2>Coursework</h2>
+									</header>									
+								</div>
+							</section>
+							<section>
+								<dl>
+									<dt>Fall 2017</dt>
+									<dd>										
+										<p>EDUC200B: Qualitative Research Methods</p>
+										<p>EDUC333A: Understanding Learning Environments</p>
+										<p>EDUC281: Technology for Learners</p>
+										<p>ME377: Design Thinking Studio</p>
+										<p>ME391: Frameworking the Future of Work</p>
+										<p>CHINLANG41: Intermediate-Advanced Chinese Conversation</p>
+									</dd>
+									<dt>Winter 2018</dt>
+									<dd>										
+										<p>EDUC211: Beyond Bits and Atoms Lab</p>
+										<p>EDUC236: Designing Technological Tools</p>
+										<p>ENGR281: Designing Media that Matters</p>
+										<p>ENGR281: Design Thinking Studio</p>										
+									</dd>
+									<dt>Spring 2018</dt>
+									<dd>										
+										<p>EDUC391: Engineering Education and Online Learning</p>
+										<p>CS106B: Programming Abstractions</p>
+										<p>CS142: Web Applications</p>
+										<p>CHINLANG43: Intermedia-Advanced Chinese Conversation</p>										
+									</dd>
+								</dl>
 							</section>
 
 					</div>
