--- a/ldt.html
+++ b/ldt.html
@@ -153,17 +153,10 @@
 											</ul>
 										</div>
 									</div>
-								</section>
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>Work</h2>
-									</header>									
-								</div>
-							</section>
+								</section>						
 								<section>
 									<a href="ldt.html" class="image">
-										<img src="images/autodesk-logo.png" alt="" data-position="top center" />
+										<img src="images/autodesk-logo.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
